--- a/data-to-districts/package.json
+++ b/data-to-districts/package.json
@@ -9,7 +9,10 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@turf/turf": "^7.1.0",
     "csv-parse": "^5.5.6",
-    "csv-stringify": "^6.5.1"
+    "csv-stringify": "^6.5.1",
+    "geojson": "^0.5.0",
+    "mapshaper": "^0.6.99"
   }
 }
